# 42sp-linear-algebra

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs  complex.rs
matrix_display/: main.rs
src/: angle_cos.rs  complex.rs  cross_product.rs  display.rs  errors.rs  interpolate.rs  lib.rs  linear_combination.rs  main.rs  matrix.rs  traits.rs  types.rs  vector.rs
tests/: angle_cos_testes.rs  bonus_ex00_add_sub_scale_test.rs  bonus_ex01_linear_combination.rs  bonus_ex02_lerp.rs  bonus_ex03_dot_product.rs  bonus_ex04_norm.rs  bonus_ex05_cosine.rs  bonus_ex06_cross_product.rs  bonus_ex07_linear_map.rs  bonus_ex08_trace.rs  bonus_ex09_transpose.rs  bonus_ex10_row_echelon.rs  bonus_ex11_determinant.rs  bonus_ex12_inverse.rs  bonus_ex13_rank.rs  complex_matrix_tests.rs  complex_tests.rs  cross_product_tests.rs  display_tests.rs  ex00_add_sub_scale.rs  ex01_linear_combination.rs  ex02_lerp.rs  ex03_dot_product.rs  ex04_norm.rs  ex05_cosine.rs  ex06_cross_product.rs  ex07_linear_map.rs  ex08_trace.rs  ex09_transpose.rs  ex10_row_echelon.rs  ex11_determinant.rs  ex12_inverse.rs  ex13_rank.rs  interpolate_tests.rs  linear_combination_tests.rs  matrix_tests.rs  vector_tests.rs
