[package]
name = "linear_algebra"
version = "0.1.0"
edition = "2021"
authors = ["Paulo Davi Alencar de Freitas Araújo <araujo.paulo.davi@gmail.com>"]
description = "A linear algebra library in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/paulodavi/42sp-linear-algebra"
homepage = "https://github.com/paulodavi/42sp-linear-algebra"
documentation = "https://docs.rs/linear_algebra"
keywords = ["algebra", "linear", "math", "vector", "matrix", "complex"]
categories = ["science", "algorithms"]
rust-version = "1.70"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "Cargo.toml",
    "LICENSE-MIT",
    "README.md",
]

[lib]
name = "linear_algebra"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "complex"
path = "examples/complex.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
rpath = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true

[profile.test]
opt-level = 1
debug = true
